fixed Portfolio layout on mobile

--- a/sass/modules/_alignments.scss
+++ b/sass/modules/_alignments.scss
@@ -57,6 +57,11 @@
 	max-width: 18%;
 }
 
+.width-25 {
+	width: 25%;
+	max-width: 25%;
+}
+
 .width-88 {
 	width: 88%;
 	max-width: 88%;
