--- a/sass/site/primary/_case-studies.scss
+++ b/sass/site/primary/_case-studies.scss
@@ -2,8 +2,6 @@
     h2,
     h3,
     h4 {
-        color: $color__primary-900;
-        // margin-bottom: 0;
         margin: 0;
     }
 
@@ -104,6 +102,45 @@
         row-gap: map-get($spacing, 7);
         // grid-auto-flow: row;
         grid-template-areas: "intro" "immagine" "info";
+
+        h2,
+        h3,
+        h4 {
+            color: $color__primary-900;
+        }
+    }
+
+    aside > div{
+        display: grid;
+        grid-template-columns: 33% 66%;
+        overflow-wrap: break-word;
+        column-gap: 1rem;
+
+        p:first-child {
+            margin-top: 0;
+        }
+    }
+
+    .sm-h4 {
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 24px;
+        color: $color__neutral-700
+    }
+
+    .single-case_study {
+        // Technical debt: I have to write it again cause I'm in .single-case_study and I've got other overrides on margin 😅
+        @for $i from 0 through 15 {
+            .sm--margin-top-#{$i} {
+                @include margin-top($i);
+            }
+        }
+
+        .responsabilita p,
+        .tools p {
+            @include margin-top(0);
+        }
     }
 }
 
